--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
     </section>
     <section class="one" id="section5" >
       <div id="lastpara">
-        <p>
-          <h3>gfg profile:<a href="https://auth.geeksforgeeks.org/user/mouryapa03/profile" style="color: rgb(1, 12, 48);">: https://auth.geeksforgeeks.org/user/mouryapa03/profile</a></h3>
-          <h3>codechef profile:<a href=" https://www.codechef.com/users/mourya_345" style="color: rgb(1, 12, 48);"> https://www.codechef.com/users/mourya_345</a></h3>
+        <p style="display:inline-block;">
+          <h3 style="display:inline-block;">gfg profile:<a href="https://auth.geeksforgeeks.org/user/mouryapa03/profile" style="color: rgb(1, 12, 48);">: https://auth.geeksforgeeks.org/user/mouryapa03/profile</a></h3>
+          <h3 style="display:inline-block;">codechef profile:<a href=" https://www.codechef.com/users/mourya_345" style="color: rgb(1, 12, 48);"> https://www.codechef.com/users/mourya_345</a></h3>
         </p>
       </div>
       <div id="last">
